unpackaged/main/default/objects/fferpcore__PermissionErrorLog__c/fferpcore__PermissionErrorLog__c.object-meta.xml
<CustomObject>
    <description>Stores details of permission errors.</description>
    <label>Permission Error Log</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Permission Error Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Error Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>