unpackaged/main/default/objects/fferpcore__PermissionErrorLog__c/fields/fferpcore__LocationName__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LocationName__c</fullName>
    <description>The name of the object, field or custom permission where the permission error occurred.</description>
    <inlineHelpText>The name of the object, field or custom permission where the permission error occurred.</inlineHelpText>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>