unpackaged/main/default/objects/fferpcore__PermissionErrorLog__c/fields/fferpcore__LocationType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LocationType__c</fullName>
    <description>Indicates whether the permission error occured on an object, field or custom permission.</description>
    <inlineHelpText>Indicates whether the permission error occured on an object, field or a custom permission.</inlineHelpText>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRUD</fullName>
                <label>Object</label>
            </value>
            <value>
                <fullName>FLS</fullName>
                <label>Field</label>
            </value>
            <value>
                <fullName>CUSTOM_PERMISSION</fullName>
                <label>Custom Permission</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>