unpackaged/main/default/objects/fferpcore__PermissionErrorLog__c/fields/fferpcore__NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__NamespacePrefix__c</fullName>
    <description>The prefix of the namespace of the package where the permission error occurred.</description>
    <inlineHelpText>The prefix of the namespace of the package where the permission error occurred.</inlineHelpText>
    <label>Namespace Prefix</label>
    <length>17</length>
    <type>Text</type>
</CustomField>