unpackaged/main/default/objects/fferpcore__PermissionErrorLog__c/fields/fferpcore__Operation__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Operation__c</fullName>
    <description>The type of action that was attempted when the permission error occurred.</description>
    <inlineHelpText>The type of action that was attempted when the permission error occurred.</inlineHelpText>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CREATE</fullName>
            </value>
            <value>
                <fullName>READ</fullName>
            </value>
            <value>
                <fullName>MODIFY</fullName>
            </value>
            <value>
                <fullName>DEL</fullName>
                <label>DELETE</label>
            </value>
            <value>
                <fullName>UNDEL</fullName>
                <label>UNDELETE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>