unpackaged/main/default/objects/fferpcore__PermissionErrorLog__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__User__c</columns>
    <columns>fferpcore__NamespacePrefix__c</columns>
    <columns>fferpcore__LocationName__c</columns>
    <columns>fferpcore__LocationType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>